styles.css
html, body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: honeydew !important;
}

header {
    padding: 30px;
}

.logo{
    width: 60px;
    height: 60px;
    margin-bottom: 20px;
}

.logo img{
    width: auto;
    height: 100%;
}

.nav .nav-link {
    color: chocolate;
}

.nav .nav-link:active {
    color: chocolate;
    font-weight: bold;
}

.nav .nav-link:hover {
    color:brown;
    text-decoration: underline;
}

.hero {
    position: relative;
    background-size: cover;
    width: 100%;
    height: 55vh;
    margin-bottom: 20px;
    text-align: center;
    color: black;
}

.overlay:before {
    content: ' ';
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    opacity: 0.5;
    background-image: url("./images/bagels.jpg");
    background-repeat: no-repeat;
    background-position: 50% 0;
    background-size: cover;
    z-index: 0;
}

.container {
    width: 70vw;
    height: 45vh;
           }

